# bp3m

./: .gitignore  CITATION.cff  LICENSE  PHASE6_PERFORMANCE.md  README.md  bp3m_run.py  environment.yml  pyproject.toml  run_joint_cte.py
.github/workflows/: publish.yml
bp3m/: __init__.py  astro_utils.py  checkpointing.py  coords.py  data_loader.py  data_loader_flc.py  notebooks_cmd.py  plot_influence.py  setup.py  solver.py  solver_sparse.py
bp3m/notebooks/: 01_field_overview.ipynb  02_proper_motions.ipynb  03_astrometric_quality.ipynb  04_cross_match_diagnostics.ipynb  05_v2_results.ipynb  06_alignment_posterior.ipynb
bp3m/pipeline/: __init__.py  catalog_utils.py  cross_match.py  data_loader_master.py  download_gaia.py  download_hst.py  explore_utils.py  hst_catalog_crossmatch.py  output.py  plot_results.py  psf_fitting.py  run_alignment.py  run_alignment_cte.py  (+4 more)
docs/: codebase_reviews.md  cte_joint_model.md  exploration.md  future_work.md  implementation_notes.md  interface_constraints.md  synthetic_test_plan.md  v2_alignment_debug.md
gaia_cross_match/: README.md  __init__.py  catalog_matcher.py  cross_match.py  diagnostics.py  miracle_match.py  validator.py
notebooks/: 01_field_overview.ipynb  02_proper_motions.ipynb  03_astrometric_quality.ipynb  04_cross_match_diagnostics.ipynb  05_v2_results.ipynb  06_alignment_posterior.ipynb
pypass/: README.md  __init__.py  _backend.py  _jax_kernel.py  core.py  diagnostics.py  io.py  multipass.py  utils.py
tests/: test_catalog_utils.py  test_download_hst.py  test_explore_utils.py  test_pipeline_integration.py
(+8 files in other folders)
